<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sensorica.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.sensorica.ui.settings.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_gps"
        android:name="com.example.sensorica.gps"
        android:label="@string/menu_GPS"
        tools:layout="@layout/fragment_gps" />

    <fragment
        android:id="@+id/nav_orientacion"
        android:name="com.example.sensorica.ui.orientacion.OrientationFragment"
        android:label="Orientación"
        tools:layout="@layout/activity_orientacion" />
    <fragment
        android:id="@+id/nav_acelerometro"
        android:name="com.example.sensorica.ui.acelerometro.AcelerometroFragment"
        android:label="@string/menu_acelerometro"
        tools:layout="@layout/fragment_acelerometro" />
    <fragment
        android:id="@+id/nav_promixidad"
        android:name="com.example.sensorica.ui.proximidad.proximidad"
        android:label="@string/menu_proximidad"
        tools:layout="@layout/fragment_proximidad" />
</navigation>